Kubernetes/Activities/Activity1_client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: docker.io/axelsilverdew/complex_client
          ports:
            - containerPort: 3000
          resources:
              requests:
                  cpu: 100m
                  memory: 100Mi
              limits:
                  cpu: 200m
                  memory: 128Mi
