Kubernetes/Activities/Activity1_client-pod.yml
apiVersion: v1
kind: Pod
metadata:
    name: client-pod
    labels:
        component: web
spec:
    containers:
        - name: client
          image: docker.io/axelsilverdew/complex_client
          ports:
              - containerPort: 3000
          resources:
              requests:
                  cpu: 100m
                  memory: 100Mi
              limits:
                  cpu: 200m
                  memory: 150Mi
